# stm32g4-motor-project

./: .gitignore  CLAUDE.md  CMakeLists.txt  FOC_math_vs_ARM_DSP_Analysis.md  LICENSE  README.md  STM32G474RETx_FLASH copy.ld  STM32G474RETx_FLASH.ld  startup_stm32g474xx.s  stm32g4-motor-project-ex.ioc  test_velocity_mode_fix.c
.claude/: CLAUDE.md
AZURE_RTOS/App/: app_azure_rtos.c  app_azure_rtos_config.h
Communication/FreeMASTER/: Project.pmpx
Communication/Inc/: Vofa.h  Vofa_STM32G474.h  can_comm.h  rtt_jscope.h
Communication/Src/: Vofa.c  Vofa_STM32G474.c  can_comm.c  rtt_jscope.c
Core/Inc/: RTE_Components.h  app_threadx.h  can_comm_threadx.h  fdcan.h  main.h  motor_control_threadx.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  test_threadx.h  usart.h  vofa_com_threadx.h
Core/Src/: adc.c  app_threadx.c  can_comm_threadx.c  fdcan.c  gpio.c  main.c  motor_control_threadx.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c  test_threadx.c  tim.c  usart.c  vofa_com_threadx.c
MotorControl/: Design Document.md  README.md  部分设计笔记.md
MotorControl/Inc/: Current.h  Design Document.md  FOC_Loop.h  FOC_math.h  Location_Plan.h  PID_controller.h  Positioning.h  command.h  motor_params.h  normalization.h
MotorControl/Src/: Current.c  FOC_Loop.c  FOC_math.c  Location_Plan.c  PID_controller.c  Positioning.c  command.c  motor_params.c  normalization.c
USBX/App/: ux_user.h
cmake/stm32cubemx/: CMakeLists.txt
test/: CMakeLists.txt  README.md  run_tests.ps1
test/test_MotorControl/: test_FOC_math.c  测试机制说明.md
test/test_stubs/: stm32_hal_stubs.c  stm32_hal_stubs.h  stm32g4xx_hal.h
test_cpputest/: CMakeLists.txt  README.md  build_only.ps1  run_coverage.ps1  run_cpputest.ps1
test_cpputest/coverage_report/html/: index.html
test_cpputest/test_MotorControl/: test_FOC_math_cpputest.cpp  test_Positioning_cpputest.cpp  test_current_loop.cpp  test_foc_integration.cpp  test_motor_simulator.cpp
test_cpputest/test_stubs/: cordic.h  current_stub.c  motor_params_stub.c  motor_simulator.c  motor_simulator.h  normalization_stub.c  normalization_stub.h  pid_controller_stub.c  positioning_stub.c  stm32_hal_stubs.c  stm32_hal_stubs.h  stm32g4xx_hal.h
